# graphics-copilot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GOOGLE_SHEETS_GUIDE.md  README.md  cypress.config.js  image-config.json  index.html  package.json  test-data.csv  vitest.config.js
.claude/commands/: ci_commit.md  commit.md  create_plan_generic.md
backend/: README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/agent/: graph.py  session_state.py  state.py
backend/app/agent/tools/: dataframe.py  plotting.py  themes.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: sheets.py
backend/app/utils/: layout_composer.py
backend/tests/integration/: test_api_routes.py
backend/tests/unit/: test_agent_graph.py  test_chart_metadata.py  test_chat_endpoint.py  test_config.py  test_dataframe_tools.py  test_layout_composer.py  test_logging_config.py  test_plotting_tools.py  test_regenerate.py  test_schemas.py  test_sheets_service.py  test_themes.py  test_trash.py  test_upload_chart.py
cypress/fixtures/: sample-data.csv
cypress/support/: e2e.js
public/: sample-data.csv
src/: App.css  App.jsx  index.css
src/components/: AISidebar.css  AISidebar.jsx  ChartRenderer.jsx  DataManager.css  DataManager.jsx  DataUpload.css  DataUpload.jsx  Header.css  Header.jsx  SlidesViewer.css  SlidesViewer.jsx  TemplateSelector.css  TemplateSelector.jsx  ThemeSelector.css  ThemeSelector.jsx
src/components/__tests__/: AISidebar.metadata.test.jsx  (+11 more)
src/hooks/: useGoogleAuth.js
src/services/: api.js  googleSlides.js
src/test/: setup.js  utils.jsx
(+7 files in other folders)
